--- a/kubernetes-in-one-shot/nginx/deployment.yml
+++ b/kubernetes-in-one-shot/nginx/deployment.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: nginx
 spec:
   replicas: 2
-  selector: 
+  selector:
     matchLabels:
       app: nginx
   template:
@@ -18,4 +18,11 @@ spec:
         - name: nginx
           image: nginx:latest
           ports:
-          - containerPort: 80
+            - containerPort: 80
+          volumeMounts:
+            - mountPath: /var/www/html
+              name: my-volume
+      volumes:
+        - name: my-volume
+          persistentVolumeClaim:
+            claimName: local-pvc
